syntax = "proto3";

option java_package = "org.stypox.dicio.settings.datastore";
option java_multiple_files = true;

enum InputDevice {
  INPUT_DEVICE_UNSET = 0;
  INPUT_DEVICE_NOTHING = 1;
  INPUT_DEVICE_VOSK = 2;
  INPUT_DEVICE_EXTERNAL_POPUP = 3;
}
